/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.virtualization.terminal.proto;

option java_package = "com.android.virtualization.terminal.proto";
option java_multiple_files = true;

service DebianService {
  rpc ReportVmActivePorts (ReportVmActivePortsRequest) returns (ReportVmActivePortsResponse) {}
  rpc OpenForwardingRequestQueue (QueueOpeningRequest) returns (stream ForwardingRequestItem) {}
  rpc OpenShutdownRequestQueue (ShutdownQueueOpeningRequest) returns (stream ShutdownRequestItem) {}
}

message QueueOpeningRequest {
  int32 cid = 1;
}

message ActivePort {
  int32 port = 1;
  string comm = 2;
}

message ReportVmActivePortsRequest {
  repeated ActivePort ports = 1;
}

message ReportVmActivePortsResponse {
  bool success = 1;
}

message ForwardingRequestItem {
  int32 guest_tcp_port = 1;
  int32 vsock_port = 2;
}

message ShutdownQueueOpeningRequest {}

message ShutdownRequestItem {}
